<resources>
    <string name="app_name">YardSync</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_yard">Yard</string>
    <string name="fragment_scan">Scan</string>
    <string name="fragment_records">Records</string>
    <string name="fragment_profile">Profile</string>
    <string name="records">Records</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="emp_id">Emp ID</string>
    <string name="warehouse">Warehouse</string>
    <string name="email_id">Email ID</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="continue_text">Continue</string>
    <string name="destination">Destination</string>
    <string name="outgoing_weight">Outgoing Weight (In kg)</string>
    <string name="origin">Origin</string>
    <string name="time_out">Time Out</string>
    <string name="home">Home</string>
    <string name="print">Print</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="login_with_your_credentials_to_get_started">Login with your credentials to get started!</string>
    <string name="email">Email</string>
    <string name="vehicle_outgoing">Vehicle Outgoing</string>
    <string name="vehicle_checked_out_successfully">Vehicle Checked Out Successfully!</string>
    <string-array name="dropdown_items">
        <item>Loading</item>
        <item>Unloading</item>
        <item>Both</item>
    </string-array>
</resources>