<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".ui.fragments.CheckingOutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/state_progress_bar_drawable"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:id="@+id/state_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spb_animateToCurrentProgressState="true"
            app:spb_checkStateCompleted="true"
            app:spb_currentStateDescriptionColor="@color/headlineText"
            app:spb_currentStateNumber="two"
            app:spb_descriptionTopSpaceIncrementer="5dp"
            app:spb_maxStateNumber="three"
            app:spb_stateBackgroundColor="@color/grey"
            app:spb_stateDescriptionColor="@color/grey"
            app:spb_stateDescriptionSize="12dp"
            app:spb_stateForegroundColor="@color/themeColorDark"
            app:spb_stateNumberBackgroundColor="@color/headlineText"
            app:spb_stateNumberForegroundColor="@color/white"
            app:spb_stateSize="30dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outgoingWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/outgoing_weight"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/themeColorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <EditText
            android:id="@+id/edtOutgoingWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black"
            android:inputType="number"
            android:autofillHints=""
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/origin"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/themeColorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outgoingWeight">

        <EditText
            android:id="@+id/edtOrigin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito_bold"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/destination"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/themeColorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/origin">

        <EditText
            android:id="@+id/edtDestination"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito_bold"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/time_out"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/themeColorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destination">

        <EditText
            android:id="@+id/edtTimeOut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:inputType="text"
            android:allowClickWhenDisabled="true"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueBtn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/continue_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeOut" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35sp"
        android:backgroundTint="@color/white"
        android:elevation="25dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/headlineText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/continueBtn"
        app:layout_constraintTop_toBottomOf="@id/timeOut" />

</androidx.constraintlayout.widget.ConstraintLayout>
